[package]
name = "greprf"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors = ["Đ4ⱱ1ƝƇᎩ <d4v1ncy@protonmail.ch>"]
description = "secret generation"
documentation = "https://docs.rs/greprf"
readme = "README.md"
homepage = "https://github.com/d4v1ncy/greprf"
exclude = ["tests", "docs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.4", features = ["alloc"] }
clap = { version = "4.4.6", features = ["derive", "unicode", "env", "wrap_help", "string"] }
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["rc", "derive", "alloc", "serde_derive"] }
regex = { version = "1.9.6", features = ["use_std", "pattern", "logging"] }
sha3 = { version = "0.10.8", features = ["reset", "asm", "oid"] }


[lib]
name = "greprf"
path = "src/lib.rs"
